Add translations and component library
- We got a beautiful side menu 😍

--- a/Frontend/src/locales/en.json
+++ b/Frontend/src/locales/en.json
@@ -1,5 +1,13 @@
 {
+  "global": {
+    "title": "OSRS Planner"
+  },
   "home": {
     "title": "Home"
-  }
+  },
+  "about": {
+    "title": "About"
+  },
+  "quests": "Quests",
+  "items": "Items test"
 }
